test_regress/t/t_sequence_first_match_unsup.out
%Error-NEEDTIMINGOPT: t/t_sequence_first_match_unsup.v:47:33: Use --timing or --no-timing to specify how delays should be handled
                                                            : ... note: In instance 'main'
   47 |   initial p0: assert property ((##1 1) or (##2 1) |-> x==1);
      |                                 ^~
                      ... For error description see https://verilator.org/warn/NEEDTIMINGOPT?v=latest
%Error-NEEDTIMINGOPT: t/t_sequence_first_match_unsup.v:47:44: Use --timing or --no-timing to specify how delays should be handled
                                                            : ... note: In instance 'main'
   47 |   initial p0: assert property ((##1 1) or (##2 1) |-> x==1);
      |                                            ^~
%Error-NEEDTIMINGOPT: t/t_sequence_first_match_unsup.v:50:45: Use --timing or --no-timing to specify how delays should be handled
                                                            : ... note: In instance 'main'
   50 |   initial p1: assert property (first_match((##1 1) or (##2 1)) |-> x==1);
      |                                             ^~
%Error-NEEDTIMINGOPT: t/t_sequence_first_match_unsup.v:50:56: Use --timing or --no-timing to specify how delays should be handled
                                                            : ... note: In instance 'main'
   50 |   initial p1: assert property (first_match((##1 1) or (##2 1)) |-> x==1);
      |                                                        ^~
%Error-NEEDTIMINGOPT: t/t_sequence_first_match_unsup.v:53:37: Use --timing or --no-timing to specify how delays should be handled
                                                            : ... note: In instance 'main'
   53 |   initial p2: assert property (1 or ##1 1 |-> x==0);
      |                                     ^~
%Error-NEEDTIMINGOPT: t/t_sequence_first_match_unsup.v:56:49: Use --timing or --no-timing to specify how delays should be handled
                                                            : ... note: In instance 'main'
   56 |   initial p3: assert property (first_match(1 or ##1 1) |-> x==0);
      |                                                 ^~
%Error: Internal Error: t/t_sequence_first_match_unsup.v:47:33: ../V3Ast.cpp:#: AstSExpr must have non nullptr delayp()
                                                              : ... note: In instance 'main'
   47 |   initial p0: assert property ((##1 1) or (##2 1) |-> x==1);
      |                                 ^~
                        ... This fatal error may be caused by the earlier error(s); resolve those first.
